# cmssw2cmake

./: README.md  cmake.xml  cmssw2cmake.sh  ninja.xml  runtime2cmake.pl  scram2cmake.pl  tools2cmake.pl
cmake/: CMakeLists.txt  CMakeLists.txt.tmp  all.cmake  common.cmake  condformat_serialization.cmake  edmplugincmds.cmake  root_dict.cmake  top.cmake  utils.cmake
src/main/: scram.pl
