cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(cmssw C CXX Fortran)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/tools)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/coral)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw)
set(CMAKE_SKIP_RPATH ON)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS_RELEASE_INIT "")
set(CMAKE_CXX_FLAGS_INIT "")
set(CMAKE_CXX_FLAGS_RELEASE "")
set(CMAKE_CXX_FLAGS "")
include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmake/all.cmake)
if(NOT CMAKE_COMPILER)
  set(CMAKE_COMPILER gcc)
endif()
cms_find_package(${CMAKE_COMPILER}_cxxcompiler)
cms_find_package(${CMAKE_COMPILER}_ccompiler)
cms_find_package(${CMAKE_COMPILER}_f77compiler)
set(LINK_DIRECTORIES ${CMAKE_INSTALL_PREFIX}/lib/${SCRAM_ARCH} ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
set(INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES} ${CMAKE_SOURCE_DIR})
set(CMAKE_EXE_LINKER_FLAGS -pthread)
#include(CTest)
#process_subdirs(${CMAKE_CURRENT_SOURCE_DIR})
set(dirnames src bin test plugins interface)
foreach(dirname ${dirnames})
file(GLOB subdirs "*/*/${dirname}")
foreach(dir ${subdirs})
  if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
    add_subdirectory(${dir})
  endif()
endforeach()
endforeach()
